--- a/index.html
+++ b/index.html
@@ -16,25 +16,36 @@
             margin: 0;
             padding: 20px;
             background-color: black;
+            overflow-x: hidden;
         }
         h2 {
-            margin-top: 20px;
-            font-size: 1.5em;
             color: red;
         }
         .video-container {
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
+            gap: 1rem;
         }
         .video-item {
-            max-width: 600px;
-            width: 100%;
+            display: flex;
+            flex-direction: column;
+            flex: 1;
+            min-width: 320px;
+            background-color: darkblue;
+            padding: 1rem;
         }
         .video-js {
+            display: flex;
+            flex-direction: column;
             width: 100%;
             overflow: hidden;
+        }
+
+        /* Responsive styles for mobile devices */
+        @media (max-width: 480px) {
+            .video-js {
+                height: 50vh; /* Further adjust height for very small screens */
+            }
         }
     </style>
 </head>
@@ -43,7 +54,7 @@
         <div class="video-item">
             <h2>70 at Oak Grove, MM 28.2</h2>
             <!-- Video.js Player -->
-            <video id="videoPlayer10957_html5_api" class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted>
+            <video id="videoPlayer10957_html5_api" class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
                 <source src="https://sfs02-traveler.modot.mo.gov/rtplive/MODOT_CAM_340/playlist.m3u8" type="application/x-mpegURL">
             </video>
         </div>
@@ -51,24 +62,8 @@
         <div class="video-item">
             <h2>70 at Odessa, MM 37.71</h2>
             <!-- Video.js Player for Odessa -->
-            <video id="videoPlayerOdessa" class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted>
+            <video id="videoPlayerOdessa" class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
                 <source src="https://sfs03-traveler.modot.mo.gov/rtplive/MODOT_CAM_341/playlist.m3u8" type="application/x-mpegURL">
-            </video>
-        </div>
-
-        <div class="video-item">
-            <h2>I-70 WB Before Adams Dairy Pkwy</h2>
-            <!-- Video.js Player for Adams Dairy Pkwy -->
-            <video id="videoPlayerAdamsDairy" class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted>
-                <source src="https://sfs02-traveler.modot.mo.gov/rtplive/MODOT_CAM_340/playlist.m3u8" type="application/x-mpegURL">
-            </video>
-        </div>
-
-        <div class="video-item">
-            <h2>I-70 WB Past MO-7</h2>
-            <!-- Video.js Player for I-70 WB Past MO-7 -->
-            <video id="videoPlayerPastMO7" class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted>
-                <source src="https://sfs02-traveler.modot.mo.gov/rtplive/MODOT_CAM_339/playlist.m3u8" type="application/x-mpegURL">
             </video>
         </div>
     </div>
