--- a/index.html
+++ b/index.html
@@ -51,19 +51,68 @@
 </head>
 <body>
     <div class="video-container">
+
+        <div class="video-item">
+            <h2>70 at Odessa, MM 37.71</h2>
+            <!-- Video.js Player for Odessa -->
+            <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                <source src="https://sfs03-traveler.modot.mo.gov/rtplive/MODOT_CAM_341/playlist.m3u8" type="application/x-mpegURL">
+            </video>
+        </div>
+
         <div class="video-item">
             <h2>70 at Oak Grove, MM 28.2</h2>
             <!-- Video.js Player -->
-            <video id="videoPlayer10957_html5_api" class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+            <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
                 <source src="https://sfs02-traveler.modot.mo.gov/rtplive/MODOT_CAM_340/playlist.m3u8" type="application/x-mpegURL">
             </video>
         </div>
 
         <div class="video-item">
-            <h2>70 at Odessa, MM 37.71</h2>
+            <h2>I-70 WB Before Adams Dairy Pkwy</h2>
             <!-- Video.js Player for Odessa -->
-            <video id="videoPlayerOdessa" class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
-                <source src="https://sfs03-traveler.modot.mo.gov/rtplive/MODOT_CAM_341/playlist.m3u8" type="application/x-mpegURL">
+            <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                <source src="https://5fca316e7c40f.streamlock.net/live-secure/M070WBIPC-35-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+            </video>
+        </div>
+
+        <div class="video-item">
+            <h2>I-70 EB Past MO-7</h2>
+            <!-- Video.js Player for Odessa -->
+            <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                <source src="https://5fca316e7c40f.streamlock.net/live-secure/M070EBIPC-34-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+            </video>
+        </div>
+
+        <div class="video-item">
+            <h2>I-70 EB At I-470</h2>
+            <!-- Video.js Player for Odessa -->
+            <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                <source src="https://5fca316e7c40f.streamlock.net/live-secure/M070EBC-27-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+            </video>
+        </div>
+
+        <div class="video-item">
+            <h2>I-70 WB At Stadium Dr</h2>
+            <!-- Video.js Player for Odessa -->
+            <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                <source src="https://5fca316e7c40f.streamlock.net/live-secure/M070WBIPC-19-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+            </video>
+        </div>
+
+        <div class="video-item">
+            <h2>I-435 NB Before the Bridge (210)</h2>
+            <!-- Video.js Player for Odessa -->
+            <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                <source src="https://5fca316e7c40f.streamlock.net/live-secure/M435NBIPC-19-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+            </video>
+        </div>
+
+        <div class="video-item">
+            <h2>I-435 SB at MO-152</h2>
+            <!-- Video.js Player for Odessa -->
+            <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                <source src="https://5fca316e7c40f.streamlock.net/live-secure/M435SBC-26-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
             </video>
         </div>
     </div>
