--- a/index.html
+++ b/index.html
@@ -16,26 +16,21 @@
         }
         body {
             font-family: "Public Sans", sans-serif;
-            background: url('background.jpg') no-repeat center center fixed;
-            background-size: cover;
             position: relative;
             overflow-x: hidden;
             color: white;
-            background-color: rgba(24, 120, 255, 1); /* Black overlay with 50% opacity */
+            background-color: rgb(12, 129, 255);
         }
-        body::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(24, 120, 255, 0.8); /* Black overlay with 50% opacity */
-            z-index: -1;
+        h1 {
+            text-transform: uppercase;
+            font-size: 2.4rem;
+            font-weight: 800;
+            text-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
         }
         h2 {
             font-size: 1.2rem;
             font-weight: 700;
+            text-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
         }
         main {
             display: flex;
@@ -43,17 +38,17 @@
             align-items: center;
             width: 100%;
             padding: 0.75rem;
+            gap: 0.75rem;
             position: relative;
             z-index: 1; /* Ensure content is above the overlay */
         }
+        header,
         .video-container {
             display: flex;
             flex-wrap: wrap;
             gap: 1rem;
             max-width: 1200px;
             width: 100%;
-            padding-top: 2rem;
-            padding-bottom: 2rem;
         }
         .video-item {
             transition: all 0.15s ease-in-out;
@@ -62,9 +57,7 @@
             flex: 1;
             min-width: 320px;
             height: 320px;
-            background-color: rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(1rem);
-            -webkit-backdrop-filter: blur(1rem);
+            background-color: rgba(0, 0, 0, 0.4);
             padding: 0.75rem;
             gap: 0.75rem;
             border-radius: 0.75rem;
@@ -76,16 +69,13 @@
             overflow: hidden;
             border-radius: 0.25rem;
         }
-        /* Responsive styles for mobile devices */
-        @media (max-width: 900px) {
-            .video-item:hover {
-                transform: scale(1);
-            }
-        }
     </style>
 </head>
 <body>
     <main>
+        <header>
+            <h1>How The Roads?</h1>
+        </header>
         <div class="video-container">
             <div class="video-item">
                 <h2>I-70 at Odessa</h2>
