--- a/index.html
+++ b/index.html
@@ -128,5 +128,14 @@
         </div>
     </main>
     <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LX0GQ46N1N"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LX0GQ46N1N');
+    </script>
 </body>
 </html> 
