--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             font-weight: 700;
             text-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
         }
+        h3 {
+            font-size: 1.2rem;
+            font-weight: 500;
+            opacity: 0.4;
+        }
         main {
             display: flex;
             flex-direction: column;
@@ -43,12 +48,18 @@
             z-index: 1; /* Ensure content is above the overlay */
         }
         header,
+        footer,
         .video-container {
             display: flex;
             flex-wrap: wrap;
-            gap: 1rem;
+            gap: 0.75rem;
             max-width: 1200px;
             width: 100%;
+        }
+        header,
+        footer {
+            justify-content: space-between;
+            align-items: center;
         }
         .video-item {
             transition: all 0.15s ease-in-out;
@@ -75,6 +86,7 @@
     <main>
         <header>
             <h1>How The Roads?</h1>
+            <h3>that darn question again...</h3>
         </header>
         <div class="video-container">
             <div class="video-item">
@@ -126,6 +138,10 @@
                 </video>
             </div>
         </div>
+        <footer>
+            <h2>it's cold out there</h2>
+            <h3>made in mo</h3>
+        </footer>
     </main>
     <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
     <!-- Google tag (gtag.js) -->
