--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             .then(response => response.json())
             .then(data => {
                 const temp = Math.round(data.main.temp);
-                document.getElementById('temperature-text').textContent = `${temp}°F in Kansas City`;
+                document.getElementById('temperature-text').textContent = `it's currently ${temp}°f`;
             })
             .catch(error => {
                 console.error('Error fetching weather:', error);
