added more locations

--- a/index.html
+++ b/index.html
@@ -126,6 +126,18 @@
                 </video>
             </div>
             <div class="video-item">
+                <h2>I-70 WB at Benton Blvd</h2>
+                <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M070WBC-10-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
+                <h2>I-35 NB at Paseo Blvd</h2>
+                <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M035NBC-08-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
                 <h2>I-435 NB before 210</h2>
                 <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
                     <source src="https://5fca316e7c40f.streamlock.net/live-secure/M435NBIPC-19-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
@@ -135,6 +147,18 @@
                 <h2>I-435 SB at MO-152</h2>
                 <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
                     <source src="https://5fca316e7c40f.streamlock.net/live-secure/M435SBC-26-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
+                <h2>I-169 NB at NW 68TH ST</h2>
+                <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M169NBC-25-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
+                <h2>I-29 NB at Barry Road</h2>
+                <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M029NBIPC-15-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
                 </video>
             </div>
         </div>
