--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
                 </video>
             </div>
             <div class="video-item">
-                <h2>I-70 WB at Adams Dairy Pkwy</h2>
+                <h2>I-70 WB before Adams Dairy Pkwy</h2>
                 <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
                     <source src="https://5fca316e7c40f.streamlock.net/live-secure/M070WBIPC-35-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
                 </video>
             </div>
             <div class="video-item">
-                <h2>I-70 EB at MO-7</h2>
+                <h2>I-70 EB past MO-7</h2>
                 <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
                     <source src="https://5fca316e7c40f.streamlock.net/live-secure/M070EBIPC-34-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
                 </video>
@@ -138,9 +138,15 @@
                 </video>
             </div>
             <div class="video-item">
-                <h2>I-435 NB before 210</h2>
+                <h2>I-435 NB before MO-210</h2>
                 <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
                     <source src="https://5fca316e7c40f.streamlock.net/live-secure/M435NBIPC-19-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
+                <h2>I-35 SB past I-435</h2>
+                <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M035SBC-18-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
                 </video>
             </div>
             <div class="video-item">
@@ -150,7 +156,13 @@
                 </video>
             </div>
             <div class="video-item">
-                <h2>I-169 NB at NW 68TH ST</h2>
+                <h2>I-35 SB at MO-291</h2>
+                <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M035SBIPC-54-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
+                <h2>I-169 NB past NW 68TH ST</h2>
                 <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
                     <source src="https://5fca316e7c40f.streamlock.net/live-secure/M169NBC-25-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
                 </video>
@@ -159,6 +171,12 @@
                 <h2>I-29 NB at Barry Road</h2>
                 <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
                     <source src="https://5fca316e7c40f.streamlock.net/live-secure/M029NBIPC-15-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
+                <h2>I-29 NB at 64TH ST</h2>
+                <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M029NBC-07-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
                 </video>
             </div>
         </div>
