--- a/index.html
+++ b/index.html
@@ -120,6 +120,24 @@
                 </video>
             </div>
             <div class="video-item">
+                <h2>I-470 SB at Woods Chapel</h2>
+                <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M470SBC-08-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
+                <h2>I-470 WB at Blue Pkwy</h2>
+                <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M470WBC-05-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
+                <h2>I-470 WB at Blue Ridge Blvd</h2>
+                <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M470WBC-02-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
                 <h2>I-70 WB at Stadium Dr</h2>
                 <video class="video-js vjs-default-skin" controls preload="auto" width="600" height="400" poster="https://trafficcamarchive.com/images/missouriThumbnail.jpg" data-setup='{}' autoplay muted playsinline>
                     <source src="https://5fca316e7c40f.streamlock.net/live-secure/M070WBIPC-19-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
