--- a/index.html
+++ b/index.html
@@ -8,18 +8,27 @@
     <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+        :root {
+            --color-primary: rgb(0, 109, 225);
+            --color-secondary: rgb(0, 11, 23);
+            --color-tertiary: rgb(190, 155, 255);
+        }
         *,
         html {
             box-sizing: border-box;
             margin: 0;
             padding: 0;
         }
+        html {
+            background-color: var(--color-primary);
+        }
         body {
             font-family: "Public Sans", sans-serif;
             position: relative;
             overflow-x: hidden;
             color: white;
-            background-color: rgb(12, 129, 255);
+            background: linear-gradient(to bottom, var(--color-primary), var(--color-tertiary));
         }
         h1 {
             text-transform: uppercase;
@@ -30,12 +39,12 @@
         h2 {
             font-size: 1.2rem;
             font-weight: 700;
-            text-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
         }
         h3 {
             font-size: 1.2rem;
             font-weight: 500;
-            opacity: 0.4;
+            color: rgba(255, 255, 255, 0.5);
+            font-style: italic;
         }
         main {
             display: flex;
@@ -52,8 +61,8 @@
         .video-container {
             display: flex;
             flex-wrap: wrap;
-            gap: 0.75rem;
             max-width: 1200px;
+            gap: 0.75rem;
             width: 100%;
         }
         header,
@@ -68,17 +77,29 @@
             flex: 1;
             min-width: 320px;
             height: 320px;
-            background-color: rgba(0, 0, 0, 0.4);
-            padding: 0.75rem;
-            gap: 0.75rem;
+            border: 1px solid var(--color-primary);
             border-radius: 0.75rem;
+            overflow: hidden;
+        }
+        .video-item h2 {
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 0.75rem;
         }
         .video-js {
             display: flex;
             flex-direction: column;
             width: 100%;
             overflow: hidden;
-            border-radius: 0.25rem;
+        }
+
+        @media (max-width: 600px) {
+            h2 {
+                font-size: 1rem;
+            }
+            .video-item {
+                height: 200px;
+                min-width: 160px;
+            }
         }
     </style>
 </head>
