--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How The Roads?</title>
+    <title>HOW THE ROADS?</title>
+    <meta name="description" content="KC COMMUTE CAMS">
     <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Flag-map_of_Missouri.svg/682px-Flag-map_of_Missouri.svg.png" />
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
     <style>
@@ -19,6 +20,14 @@
             box-sizing: border-box;
             margin: 0;
             padding: 0;
+        }
+        ::selection {
+            background-color: var(--color-primary);
+            color: var(--color-tertiary);
+        }
+        ::-webkit-selection {
+            background-color: var(--color-primary);
+            color: var(--color-tertiary);
         }
         html {
             background-color: var(--color-primary);
@@ -77,7 +86,7 @@
             flex: 1;
             min-width: 320px;
             height: 320px;
-            border: 1px solid var(--color-primary);
+            border: 4px solid rgba(255, 255, 255, 0.2);
             border-radius: 0.75rem;
             overflow: hidden;
         }
@@ -88,7 +97,7 @@
         .video-item video {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            /* object-fit: cover; */
         }
         .vjs-theme-city {
             --vjs-theme-city--primary: var(--color-primary);
@@ -109,16 +118,6 @@
         .plyr--video .plyr__controls {
             background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.6));
             padding: 8px;
-        }
-
-        @media (max-width: 600px) {
-            h2 {
-                font-size: 1rem;
-            }
-            .video-item {
-                height: 200px;
-                min-width: 160px;
-            }
         }
     </style>
 </head>
